# myv-nmt

./: .gitignore  README.md  pyproject.toml
dirty-code-2022/data_collection/: fennougrica_books.ipynb  get_english_pairs.ipynb  list e-mordovia books (2).ipynb  load_bible.ipynb  make_train_dev_sets.ipynb  more_dictionaries.ipynb  multilang-detect.ipynb  parse_erzya_pravda.ipynb  parse_finnougoria.ipynb  parse_goloserzi.ipynb  parse_livejournal.ipynb  parse_misc_websites_v2.ipynb  parse_pdf (2).ipynb  parse_pdf_parallel_books.ipynb  parse_rus4all_and_align.ipynb  parse_wikipedia.ipynb  wikisource.ipynb
dirty-code-2022/model_training/: 02_pretrain_sentence_encoder.ipynb  03_myv_vocabulary.ipynb  04_train_myv_ru_model_v1.ipynb  05_train_ru_myv_model_v1.ipynb  06_train_mul_myv_models.ipynb  07_myv_extra_scoring.ipynb
dirty-code-2023/: 01_myv_labse_v2.ipynb  02_align_articles.ipynb  03_align_books.ipynb  04_parse_bidix.ipynb
slone_nmt/: README.md  document_alignment.py  metrics_2024.py  myv_translit.py  nllb_preprocessing.py  nllb_update.py
slone_nmt/dictionary_tools/: explainer.py  lemming.py
test_data/: myv-en-ud-dev.json  myv-en-ud-test.json  myv-fi-ud-dev.json  myv-fi-ud-test.json  myv-ru-v1-dev.json  myv-ru-v1-test.json
